--- a/01-FirstHtmlFullSite/Contact.html
+++ b/01-FirstHtmlFullSite/Contact.html
@@ -11,10 +11,10 @@
         <img src="../01-FirstHtmlFullSite/image/logo.png" alt="not found"  title="coffee">
         <h1> Contact </h1>
         <ul>
-           <li><a href="file:///C:/Users/Murs%C4%B1t%20C%C4%B1cek/Desktop/AF202FrontendProjects/01-FirstHtmlFullSite/Home.html"> Home </a></li>
-           <li><a href="file:///C:/Users/Murs%C4%B1t%20C%C4%B1cek/Desktop/AF202FrontendProjects/01-FirstHtmlFullSite/About.html"> About </a></li>
-           <li><a href="file:///C:/Users/Murs%C4%B1t%20C%C4%B1cek/Desktop/AF202FrontendProjects/01-FirstHtmlFullSite/Numbers.html#top"> Numbers </a></li>
-           <li><a href="file:///C:/Users/Murs%C4%B1t%20C%C4%B1cek/Desktop/AF202FrontendProjects/01-FirstHtmlFullSite/Contact.html"> Contact </a></li>
+           <li><a href="Home.html"> Home </a></li>
+           <li><a href="About.html"> About </a></li>
+           <li><a href="Numbers.html"> Numbers </a></li>
+           <li><a href="Contact.html"> Contact </a></li>
         </ul>
         <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found"  width="1510px">
     </div>
