--- a/01-FirstHtmlFullSite/About.html
+++ b/01-FirstHtmlFullSite/About.html
@@ -7,7 +7,6 @@
     <title>About</title>
 </head>
 <body>
-    <div>
     <img src="../01-FirstHtmlFullSite/image/logo.png" alt="not found"  title="coffee">
     <h1> About </h1>
     <ul>
@@ -16,21 +15,19 @@
         <li><a href="Numbers.html"> Numbers </a></li>
         <li><a href="Contact.html"> Contact </a></li>
     </ul>
-    <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found" width="1510px" >
-    </div>
+    <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found" width="100%" >
 
-    <div>
     <h2> About Us </h2>
     <br><br>
     <p>Our inauguration into the industry came with bringing high quality Colombian coffee to consumers in the tristate area. 
        Today, we carry that same quality standard and offer a wide array of coffees from all over the world. We attain Arabica and Robusta coffee beans from our sources around the globe and roast them right here in Queens, NY. 
-       Whether you want your coffee ground or whole bean, we are well equipped to meet your needs. Our professional roasters master our procedures and recipes to ensure consistency. All of our coffee is packaged on site and we guarantee its freshness.
+       Whether you want your coffee ground or whole bean, we are well equipped to meet your needs. Our professional roasters master our procedures and recipes to ensure consistency. 
+       All of our coffee is packaged on site and we guarantee its freshness.
        Explore our products and indulge in the Eldorado Coffee experience.</p>
-    </div>
 
     <br><br><br><br><br><br>
 
-    <p> copyrigth ©2020</p>
+    <p> copyrigth ©2020 </p>
     <strong><a href="#top"> Back To Top </a></strong>
 </body>
 </html>
