--- a/01-FirstHtmlFullSite/Contact.html
+++ b/01-FirstHtmlFullSite/Contact.html
@@ -7,7 +7,6 @@
     <title>Contact</title>
 </head>
 <body>
-    <div>
         <img src="../01-FirstHtmlFullSite/image/logo.png" alt="not found"  title="coffee">
         <h1> Contact </h1>
         <ul>
@@ -16,9 +15,8 @@
            <li><a href="Numbers.html"> Numbers </a></li>
            <li><a href="Contact.html"> Contact </a></li>
         </ul>
-        <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found"  width="1510px">
-    </div>
-    <div>
+        <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found"  width="100%">
+
         <h2> Contact </h2>
         <form>
             <label for="Name"> Name </label>
@@ -29,11 +27,11 @@
             <textarea name="Description" id="Description" cols="28" rows="10" placeholder="Your Description"></textarea><br>
             <button> Submit here </button>
         </form>
-    </div>
+
     
     <br><br><br><br><br><br>
 
-    <p> copyrigth ©2020</p>
+    <p> copyrigth ©2020 </p>
     <strong><a href="#top"> Back To Top </a></strong>
 </body>
 </html>
