--- a/01-FirstHtmlFullSite/Home.html
+++ b/01-FirstHtmlFullSite/Home.html
@@ -12,7 +12,6 @@
   }
 </style>
 <body>
-    <div>
       <img src="../01-FirstHtmlFullSite/image/logo.png" alt="not found"  title="coffee">
       <h1> Coffee Junkie </h1>
       <ul>
@@ -21,12 +20,12 @@
          <li><a href="Numbers.html"> Numbers </a></li>
          <li><a href="Contact.html"> Contact </a></li>
       </ul>
-      <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found"  width="1510px">
-    </div>
-    
-    <div>
+      <img class="background" src="../01-FirstHtmlFullSite/image/background.png" alt="not found"  width="100%">
+
+
       <h1> Featured Products </h1> 
       <br>
+
       <h3> House Blend Coffee </h3>
       <img src="../01-FirstHtmlFullSite/image/house-blend.png" alt="not found" title="House Blend Coffee ">
       <p>House Blend coffee is unique to every coffee shop, every roaster, and every drinker. 
@@ -35,9 +34,8 @@
         The one blend that set the course for the way our master blenders and roasters work even today.
         A true reflection of us and delicious cup of coffee, period.” </i></p>
       <strong><a href="https://www.cartacoffee.com/blogs/island-blog/what-is-house-blend-coffee" target="_blank"> Details </a></strong>
-    </div>
 
-    <div>
+
       <h3> French Roast </h3>
       <img src="../01-FirstHtmlFullSite/image/French-roast.png" alt="not found" title="French Roast">
       <p>Simply put, <i>“French roast”</i> describes the color of the coffee beans after they have been roasted.
@@ -45,20 +43,19 @@
         It does not mean the coffee was grown or roasted in France (although yes, that is where the roasting style originated in the 1800s).
         The name is believed to reflect the tastes and traditions of coffee roasters in Europe in the 19th century, where dark-roasted coffee was all the rage. </p>
       <strong><a href="https://www.homegrounds.co/what-is-french-roast-coffee/" target="_blank"> Details </a></strong>
-    </div>
 
-    <div>
+
       <h3> Colombian Roast </h3>
       <img src="../01-FirstHtmlFullSite/image/Colombian-roast.png" alt="not found" title="Columbian Roast">
       <p>Colombia is famous for growing some of the best coffee beans in the world; the plants thrive under the shade of banana trees in the tropical climate.
         Because of Colombia’s high altitude, it also shapes the way the bean grows.
         Colombia is actually a near-perfect coffee growing climate, and Colombian coffee produces a specific type of bean that results from the environment. </p>
       <strong><a href="https://eldoradocoffee.com/blogs/news/colombian-coffee#:~:text=Colombian%20coffee%20also%20has%20a,light%20roasts%20and%20dark%20roasts." target="_blank"> Details </a></strong>
-    </div>
+
     
     <br><br><br><br><br><br>
 
-    <p> copyrigth ©2020</p>
+    <p> copyrigth ©2020 </p>
     <strong><a href="#top"> Back To Top </a></strong>
 </body>
 </html>
