--- a/03-PageFooterWithIconAndFont/task.html
+++ b/03-PageFooterWithIconAndFont/task.html
@@ -12,18 +12,22 @@
     
     <div class="main">
         <div class="info">
-            <i class="fa-solid fa-location-arrow"></i>
-            <span> Address</span>
-            <p>523 N FAIRFAX AVE </p>
-            <p>LOS ANGELES, CA 90048</p>
-
-            <i class="fa-solid fa-envelope"></i>
-            <span>Email</span>
-            <p>EMAIL@EMAIL.COM</p>
-
-            <i class="fa-solid fa-phone-flip"></i>
-            <span> Telephone </span>
-            <p> + 123 456 789</p>
+            <div class="address">
+                <i class="fa-solid fa-location-arrow"></i>
+                <span> Address</span>
+                <p>523 N FAIRFAX AVE </p>
+                <p>LOS ANGELES, CA 90048</p>
+            </div>
+            <div class="email">
+                <i class="fa-solid fa-envelope"></i>
+                <span>Email</span>
+                <p>EMAIL@EMAIL.COM</p>    
+            </div>
+             <div class="phone">
+                 <i class="fa-solid fa-phone-flip"></i>
+                 <span> Telephone </span>
+                 <p> + 123 456 789</p>
+             </div>
         </div>
         
         <div class="contact">
