--- a/04-PortfolioMiniWebPage/portfolio.html
+++ b/04-PortfolioMiniWebPage/portfolio.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
              <div class="img">
-                <img src="images/me.jfif" alt="">
+                <img src="images/img2.jfif" alt="">
                 <div class="ram"></div>
              </div>
         </div>    
@@ -54,7 +54,7 @@
     <section id="about">
         <div class="img-about">
             <div class="img2">
-                <img src="images/me.jfif" alt="">
+                <img src="images/img1.jfif" alt="">
                 <div class="ram2"></div>
              </div>
             <div class="about">
