--- a/07-FirstSCSSProjects/home.html
+++ b/07-FirstSCSSProjects/home.html
@@ -64,15 +64,13 @@
     <section id="tea-station">
       <div class="container">
         <div class="main">
-          <!-- <div class="image">
-            <img src="assets/images/tea.jpeg" alt="" />
-          </div> -->
-
-          <div class="article-container">
-            <div class="article-img-holder"> 
-              <img src="assets/images/tea.jpeg" alt=""></div>
-        </div>
-
+         <div class="main-left">
+           <div class="article-container">
+             <div class="article-img-holder"> 
+               <img src="assets/images/tea.jpeg" alt=""></div>
+         </div>
+         </div>
+          
           <div class="text">
             <p class="grand">About Our</p>
             <h2>Tea Station</h2>
@@ -90,6 +88,7 @@
             </p>
             <button> Learn more </button>
           </div>
+
         </div>
       </div>
     </section>
