--- a/07-FirstSCSSProjects/home.html
+++ b/07-FirstSCSSProjects/home.html
@@ -142,8 +142,7 @@
         </div>
         <div class="service">
           <div class="box">
-            <div class="card">
-              <img src="assets/images/product-1.jpeg" alt="">
+            <div class="card img1">
               <i class="fa-solid fa-mortar-pestle icon"></i>
               <h1 >Custom Recipes</h1>
               <p>
@@ -155,7 +154,6 @@
 
 
             <div class="card">
-              <img src="assets/images/product-2.jpeg" alt="">
               <i class="fa-solid fa-house-chimney icon"></i>
               <h1>Home Delivery</h1>
               <p>
@@ -167,7 +165,6 @@
 
 
             <div class="card">
-              <img src="assets/images/product-3.jpeg" alt="">
               <i class="fa-solid fa-mug-hot mug icon"></i>
               <h1>Tea Aging</h1>
               <p>
