--- a/07-FirstSCSSProjects/home.html
+++ b/07-FirstSCSSProjects/home.html
@@ -153,7 +153,7 @@
             </div>
 
 
-            <div class="card">
+            <div class="card img2">
               <i class="fa-solid fa-house-chimney icon"></i>
               <h1>Home Delivery</h1>
               <p>
@@ -164,7 +164,7 @@
             </div>
 
 
-            <div class="card">
+            <div class="card img3">
               <i class="fa-solid fa-mug-hot mug icon"></i>
               <h1>Tea Aging</h1>
               <p>
