--- a/07-FirstSCSSProjects/home.html
+++ b/07-FirstSCSSProjects/home.html
@@ -67,7 +67,7 @@
          <div class="main-left">
            <div class="article-container">
              <div class="article-img-holder"> 
-               <img src="assets/images/tea.jpeg" alt=""></div>
+              </div>
          </div>
          </div>
           
