--- a/04-PortfolioMiniWebPage/portfolio.html
+++ b/04-PortfolioMiniWebPage/portfolio.html
@@ -114,5 +114,6 @@
            <p class="footer-p"> ©2022KhidirovaSvetlana. All Rights Reserved </p>
     </footer>
 
+    <script src="portfolio.js"></script>
 </body>
 </html>
