rent page updated

--- a/14-ApartmentRentPage/home.html
+++ b/14-ApartmentRentPage/home.html
@@ -187,7 +187,7 @@
             <div class="time">
               <p><i class="fa fa-fw fa-cutlery icon"></i> Kitchen</p>
               <p>
-                <i class="fa-solid fa-temperature-three-quarters icon"></i>
+                <i class="fa-solid fa-temperature-three-quarters icon heating"></i>
                 Heating
               </p>
               <p><i class="fa fa-fw fa-wheelchair icon"></i> Accessible</p>
